# image_classification

./: Dockerfile  README.md  evaluate.py  models.py  original_dataset_loader.py  preprocess.py  pyproject.toml  requirements.txt  train.py
.github/: pull_request_template.md
scripts/: evaluate.py  models.py  original_dataset_loader.py  train.py
