[tool.poetry]
name = "tfkeras_image_classification"
version = "0.1.0"
description = ""
authors = ["kenken_nako <sc421223e@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "2.4.1"
tensorflow-datasets = "4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
