[tool.poetry]
name = "tfkeras_image_classification"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.16.1"
tensorflow-datasets = "^4.9.6"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
